--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gulp-posthtml": "^3.0.5",
     "gulp-sass": "^4.1.0",
     "gulp-svgstore": "^7.0.1",
-    "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-webp": "^4.0.1",
     "node-sass": "^4.14.1",
     "postcss": "^8.1.1",
@@ -46,7 +46,7 @@
   "dependencies": {
     "@gulp-sourcemaps/identity-map": "^2.0.1",
     "autoprefixer": "^10.0.1",
-    "browser-sync": "^2.26.12",
+    "browser-sync": "^2.26.14",
     "deep-extend": "^0.6.0",
     "del": "^6.0.0",
     "editorconfig": "^0.15.3",
